    * Made --with-sources the default for cvc promote, adding the new flag
      --without-sources.  --with-sources will still work.
    * Due to limitations in Apache 2.0, the Conary client will now use
      HTTP/1.1 "chunked" Transfer-encoding when committing changesets
      larger than 2 GiB.
    * The Conary client API exposes a new call, applyRollback. (CNY-1455).

  o Bug Fixes:
    * Local flags are now cleared after each group cook, meaning that
      multipass group cooks will have the correct local flavor. (CNY-1400)
    * Dep resolution in group cooks now also take advantage of the group 
      cache. (CNY-1386)
    * Changesets for source troves with missing files (because the file is
      missing from the upstream server or the upstream server is unavailable)
      are properly written to changeset files. (CNY-1415)
    * Derived packages (experimental) now correctly handle multiple
      architectures built from the same source. (CNY-1423)
    * loadInstalled now always works even if you have multiple versions of 
      a package installed from multiple branches.
    * Trove names are now checked for legal characters. (CNY-1358)
    * A minor bug related to file uploads on the error codepath was fixed.
      (CNY-1442)
    * A bug in cvc promote that caused it to fail when the source components
      added due to --with-sources were in conflict.  This could happen, for
      example, when different flavors of a binary were cooked from different
      source versions and all flavors to be cloned to the new label at teh 
      same time (CNY-1443)
    * Fixed a bug in the CfgQuotedLineList display function (does not affect
      conary directly)
    * Flavored items in a job list are now correctly frozen. (CNY-1479)
    * cvc cook --macros works as expected now, by defining a macro (as passed
      in on the command line with --macro) per line. (CNY-1062)
    * StreamSet objects didn't work with inheritance because the C