@@ -18,6 +18,8 @@ Changes in @NEW@:
       HTTP/1.1 "chunked" Transfer-encoding when committing changesets
       larger than 2 GiB.
     * The Conary client API exposes a new call, applyRollback. (CNY-1455).
+    * Hashes of the directories a trove places files in is now build
+      (CNY-857)
 
   o Bug Fixes:
     * Local flags are now cleared after each group cook, meaning that
